fixed spacing for project tab

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -49,10 +49,16 @@
     .header{
         max-width: 100%;
         max-height: 100%;
+        // display: flex;
+        // align-items: center;
+        // justify-content: space-between;
+        // align-content: space-between;
+
         display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
         align-items: center;
-        justify-content: space-between;
-        align-content: space-between;
     }
         .img-container{
             margin-top: 15px;
@@ -79,6 +85,7 @@
             border-bottom: 20px solid transparent;
             border-left: 20px solid black;
             margin-left: 10px;
+            margin-right: 10px;
         }
 
         .arrowRight:hover{
@@ -86,8 +93,9 @@
             height: 0; 
             border-top: 20px solid transparent;
             border-bottom: 20px solid transparent;
-            border-left: 20px solid lightgray;
+            border-left: 20px solid #218380;
             margin-left: 10px;
+            margin-right: 10px;
         }
 
         .arrowLeft{
@@ -97,6 +105,7 @@
             border-bottom: 20px solid transparent; 
             border-right:20px solid black; 
             margin-right: 10px;
+            margin-left: 10px;
             align-self: flex-start;
         }
 
@@ -105,8 +114,9 @@
             height: 0; 
             border-top: 20px solid transparent;
             border-bottom: 20px solid transparent; 
-            border-right:20px solid lightgray; 
+            border-right:20px solid #218380; 
             margin-right: 10px;
+            margin-left: 10px;
         }
     }
 
